whisper.h

    
    struct whisper_context;
    struct whisper_state;
    struct whisper_full_params;
    typedef int32_t whisper_token;
    struct whisper_context_params {
        bool  use_gpu;
        int   gpu_device;  
    };
    WHISPER_API int whisper_ctx_init_openvino_encoder(
        struct whisper_context * ctx,
                    const char * model_path,
                    const char * device,
                    const char * cache_dir);
    WHISPER_API void whisper_free      (struct whisper_context * ctx);
    WHISPER_API void whisper_free_state(struct whisper_state * state);
    WHISPER_API void whisper_free_params(struct whisper_full_params * params);
    WHISPER_API void whisper_free_context_params(struct whisper_context_params * params);
    WHISPER_API int whisper_pcm_to_mel(
            struct whisper_context * ctx,
                       const float * samples,
                               int   n_samples,
                               int   n_threads);
    WHISPER_API int whisper_pcm_to_mel_with_state(
            struct whisper_context * ctx,
              struct whisper_state * state,
                       const float * samples,
                               int   n_samples,
                               int   n_threads);
    WHISPER_API int whisper_pcm_to_mel_phase_vocoder(
        struct whisper_context * ctx,
                   const float * samples,
                           int   n_samples,
                           int   n_threads);
    WHISPER_API int whisper_pcm_to_mel_phase_vocoder_with_state(
        struct whisper_context * ctx,
          struct whisper_state * state,
                   const float * samples,
                           int   n_samples,
                           int   n_threads);
    WHISPER_API int whisper_set_mel(
            struct whisper_context * ctx,
                       const float * data,
                               int   n_len,
                               int   n_mel);
    WHISPER_API int whisper_set_mel_with_state(
            struct whisper_context * ctx,
              struct whisper_state * state,
                       const float * data,
                               int   n_len,
                               int   n_mel);
    WHISPER_API int whisper_encode(
            struct whisper_context * ctx,
                               int   offset,
                               int   n_threads);
    WHISPER_API int whisper_encode_with_state(
            struct whisper_context * ctx,
              struct whisper_state * state,
                               int   offset,
                               int   n_threads);
    WHISPER_API int whisper_decode(
            struct whisper_context * ctx,
               const whisper_token * tokens,
                               int   n_tokens,
                               int   n_past,
                               int   n_threads);
    WHISPER_API int whisper_decode_with_state(
            struct whisper_context * ctx,
              struct whisper_state * state,
               const whisper_token * tokens,
                               int   n_tokens,
                               int   n_past,
                               int   n_threads);
    WHISPER_API int whisper_tokenize(
            struct whisper_context * ctx,
                        const char * text,
                     whisper_token * tokens,
                               int   n_max_tokens);
    WHISPER_API int whisper_lang_max_id();
    WHISPER_API int whisper_lang_id(const char * lang);
    WHISPER_API const char * whisper_lang_str(int id);
    WHISPER_API int whisper_lang_auto_detect(
            struct whisper_context * ctx,
                               int   offset_ms,
                               int   n_threads,
                             float * lang_probs);
    WHISPER_API int whisper_lang_auto_detect_with_state(
            struct whisper_context * ctx,
              struct whisper_state * state,
                               int   offset_ms,
                               int   n_threads,
                             float * lang_probs);
    WHISPER_API int whisper_n_len           (struct whisper_context * ctx); 
    WHISPER_API int whisper_n_len_from_state(struct whisper_state * state); 
    WHISPER_API int whisper_n_vocab         (struct whisper_context * ctx);
    WHISPER_API int whisper_n_text_ctx      (struct whisper_context * ctx);
    WHISPER_API int whisper_n_audio_ctx     (struct whisper_context * ctx);
    WHISPER_API int whisper_is_multilingual (struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_vocab      (struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_audio_ctx  (struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_audio_state(struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_audio_head (struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_audio_layer(struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_text_ctx   (struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_text_state (struct whisper_context * ctx);
    WHISPER_API int whisper_model_n_text_head  (struct whisper_context * ctx);
    struct whisper_full_params {
        enum whisper_sampling_strategy strategy;
        int n_threads;
        int n_max_text_ctx;     
        int offset_ms;          
        int duration_ms;        
        bool translate;
        bool no_context;        
        bool no_timestamps;     
        bool single_segment;    
        bool print_special;     
        bool print_progress;    
        bool print_realtime;    
        bool print_timestamps;  
        bool  token_timestamps; 
        float thold_pt;         
        float thold_ptsum;      
        int   max_len;          
        int   max_tokens;       
        bool speed_up;          
        int  audio_ctx;         
        bool tdrz_enable;       
        const char * initial_prompt;
        const whisper_token * prompt_tokens;
        int prompt_n_tokens;
        const char * language;
        bool detect_language;
        bool suppress_blank;    
        bool suppress_non_speech_tokens; 
        bool heuristic;
        float temperature;      
        float max_initial_ts;   
        float length_penalty;   
        float temperature_inc;
        float entropy_thold;    
        float logprob_thold;
        float no_speech_thold;
        struct {
            int best_of;    
        } greedy;
        struct {
            int beam_size;  
            float patience; 
        } beam_search;
        whisper_new_segment_callback new_segment_callback;
        void * new_segment_callback_user_data;
        whisper_progress_callback progress_callback;
        void * progress_callback_user_data;
        whisper_encoder_begin_callback encoder_begin_callback;
        void * encoder_begin_callback_user_data;
        ggml_abort_callback abort_callback;
        void * abort_callback_user_data;
        whisper_logits_filter_callback logits_filter_callback;
        void * logits_filter_callback_user_data;
        const whisper_grammar_element ** grammar_rules;
        size_t                           n_grammar_rules;
        size_t                           i_start_rule;
        float                            grammar_penalty;
    };