bindings/python/whisper_cpp_wrapper.py


# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 196
if _libs["whisper"].has("whisper_ctx_init_openvino_encoder", "cdecl"):
    whisper_ctx_init_openvino_encoder = _libs["whisper"].get("whisper_ctx_init_openvino_encoder", "cdecl")
    whisper_ctx_init_openvino_encoder.argtypes = [POINTER(struct_whisper_context), String, String, String]
    whisper_ctx_init_openvino_encoder.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 203
if _libs["whisper"].has("whisper_free", "cdecl"):
    whisper_free = _libs["whisper"].get("whisper_free", "cdecl")
    whisper_free.argtypes = [POINTER(struct_whisper_context)]
    whisper_free.restype = None

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 204
if _libs["whisper"].has("whisper_free_state", "cdecl"):
    whisper_free_state = _libs["whisper"].get("whisper_free_state", "cdecl")
    whisper_free_state.argtypes = [POINTER(struct_whisper_state)]
    whisper_free_state.restype = None

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 205
if _libs["whisper"].has("whisper_free_params", "cdecl"):
    whisper_free_params = _libs["whisper"].get("whisper_free_params", "cdecl")
    whisper_free_params.argtypes = [POINTER(struct_whisper_full_params)]
    whisper_free_params.restype = None

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 206
if _libs["whisper"].has("whisper_free_context_params", "cdecl"):
    whisper_free_context_params = _libs["whisper"].get("whisper_free_context_params", "cdecl")
    whisper_free_context_params.argtypes = [POINTER(struct_whisper_context_params)]
    whisper_free_context_params.restype = None

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 211
if _libs["whisper"].has("whisper_pcm_to_mel", "cdecl"):
    whisper_pcm_to_mel = _libs["whisper"].get("whisper_pcm_to_mel", "cdecl")
    whisper_pcm_to_mel.argtypes = [POINTER(struct_whisper_context), POINTER(c_float), c_int, c_int]
    whisper_pcm_to_mel.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 217
if _libs["whisper"].has("whisper_pcm_to_mel_with_state", "cdecl"):
    whisper_pcm_to_mel_with_state = _libs["whisper"].get("whisper_pcm_to_mel_with_state", "cdecl")
    whisper_pcm_to_mel_with_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), POINTER(c_float), c_int, c_int]
    whisper_pcm_to_mel_with_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 227
if _libs["whisper"].has("whisper_pcm_to_mel_phase_vocoder", "cdecl"):
    whisper_pcm_to_mel_phase_vocoder = _libs["whisper"].get("whisper_pcm_to_mel_phase_vocoder", "cdecl")
    whisper_pcm_to_mel_phase_vocoder.argtypes = [POINTER(struct_whisper_context), POINTER(c_float), c_int, c_int]
    whisper_pcm_to_mel_phase_vocoder.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 233
if _libs["whisper"].has("whisper_pcm_to_mel_phase_vocoder_with_state", "cdecl"):
    whisper_pcm_to_mel_phase_vocoder_with_state = _libs["whisper"].get("whisper_pcm_to_mel_phase_vocoder_with_state", "cdecl")
    whisper_pcm_to_mel_phase_vocoder_with_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), POINTER(c_float), c_int, c_int]
    whisper_pcm_to_mel_phase_vocoder_with_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 244
if _libs["whisper"].has("whisper_set_mel", "cdecl"):
    whisper_set_mel = _libs["whisper"].get("whisper_set_mel", "cdecl")
    whisper_set_mel.argtypes = [POINTER(struct_whisper_context), POINTER(c_float), c_int, c_int]
    whisper_set_mel.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 250
if _libs["whisper"].has("whisper_set_mel_with_state", "cdecl"):
    whisper_set_mel_with_state = _libs["whisper"].get("whisper_set_mel_with_state", "cdecl")
    whisper_set_mel_with_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), POINTER(c_float), c_int, c_int]
    whisper_set_mel_with_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 261
if _libs["whisper"].has("whisper_encode", "cdecl"):
    whisper_encode = _libs["whisper"].get("whisper_encode", "cdecl")
    whisper_encode.argtypes = [POINTER(struct_whisper_context), c_int, c_int]
    whisper_encode.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 266
if _libs["whisper"].has("whisper_encode_with_state", "cdecl"):
    whisper_encode_with_state = _libs["whisper"].get("whisper_encode_with_state", "cdecl")
    whisper_encode_with_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), c_int, c_int]
    whisper_encode_with_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 278
if _libs["whisper"].has("whisper_decode", "cdecl"):
    whisper_decode = _libs["whisper"].get("whisper_decode", "cdecl")
    whisper_decode.argtypes = [POINTER(struct_whisper_context), POINTER(whisper_token), c_int, c_int, c_int]
    whisper_decode.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 285
if _libs["whisper"].has("whisper_decode_with_state", "cdecl"):
    whisper_decode_with_state = _libs["whisper"].get("whisper_decode_with_state", "cdecl")
    whisper_decode_with_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), POINTER(whisper_token), c_int, c_int, c_int]
    whisper_decode_with_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 298
if _libs["whisper"].has("whisper_tokenize", "cdecl"):
    whisper_tokenize = _libs["whisper"].get("whisper_tokenize", "cdecl")
    whisper_tokenize.argtypes = [POINTER(struct_whisper_context), String, POINTER(whisper_token), c_int]
    whisper_tokenize.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 305
if _libs["whisper"].has("whisper_lang_max_id", "cdecl"):
    whisper_lang_max_id = _libs["whisper"].get("whisper_lang_max_id", "cdecl")
    whisper_lang_max_id.argtypes = []
    whisper_lang_max_id.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 311
if _libs["whisper"].has("whisper_lang_id", "cdecl"):
    whisper_lang_id = _libs["whisper"].get("whisper_lang_id", "cdecl")
    whisper_lang_id.argtypes = [String]
    whisper_lang_id.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 314
if _libs["whisper"].has("whisper_lang_str", "cdecl"):
    whisper_lang_str = _libs["whisper"].get("whisper_lang_str", "cdecl")
    whisper_lang_str.argtypes = [c_int]
    whisper_lang_str.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 322
if _libs["whisper"].has("whisper_lang_auto_detect", "cdecl"):
    whisper_lang_auto_detect = _libs["whisper"].get("whisper_lang_auto_detect", "cdecl")
    whisper_lang_auto_detect.argtypes = [POINTER(struct_whisper_context), c_int, c_int, POINTER(c_float)]
    whisper_lang_auto_detect.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 328
if _libs["whisper"].has("whisper_lang_auto_detect_with_state", "cdecl"):
    whisper_lang_auto_detect_with_state = _libs["whisper"].get("whisper_lang_auto_detect_with_state", "cdecl")
    whisper_lang_auto_detect_with_state.argtypes = [POINTER(struct_whisper_context), POINTER(struct_whisper_state), c_int, c_int, POINTER(c_float)]
    whisper_lang_auto_detect_with_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 335
if _libs["whisper"].has("whisper_n_len", "cdecl"):
    whisper_n_len = _libs["whisper"].get("whisper_n_len", "cdecl")
    whisper_n_len.argtypes = [POINTER(struct_whisper_context)]
    whisper_n_len.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 336
if _libs["whisper"].has("whisper_n_len_from_state", "cdecl"):
    whisper_n_len_from_state = _libs["whisper"].get("whisper_n_len_from_state", "cdecl")
    whisper_n_len_from_state.argtypes = [POINTER(struct_whisper_state)]
    whisper_n_len_from_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 337
if _libs["whisper"].has("whisper_n_vocab", "cdecl"):
    whisper_n_vocab = _libs["whisper"].get("whisper_n_vocab", "cdecl")
    whisper_n_vocab.argtypes = [POINTER(struct_whisper_context)]
    whisper_n_vocab.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 338
if _libs["whisper"].has("whisper_n_text_ctx", "cdecl"):
    whisper_n_text_ctx = _libs["whisper"].get("whisper_n_text_ctx", "cdecl")
    whisper_n_text_ctx.argtypes = [POINTER(struct_whisper_context)]
    whisper_n_text_ctx.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 339
if _libs["whisper"].has("whisper_n_audio_ctx", "cdecl"):
    whisper_n_audio_ctx = _libs["whisper"].get("whisper_n_audio_ctx", "cdecl")
    whisper_n_audio_ctx.argtypes = [POINTER(struct_whisper_context)]
    whisper_n_audio_ctx.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 340
if _libs["whisper"].has("whisper_is_multilingual", "cdecl"):
    whisper_is_multilingual = _libs["whisper"].get("whisper_is_multilingual", "cdecl")
    whisper_is_multilingual.argtypes = [POINTER(struct_whisper_context)]
    whisper_is_multilingual.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 342
if _libs["whisper"].has("whisper_model_n_vocab", "cdecl"):
    whisper_model_n_vocab = _libs["whisper"].get("whisper_model_n_vocab", "cdecl")
    whisper_model_n_vocab.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_vocab.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 343
if _libs["whisper"].has("whisper_model_n_audio_ctx", "cdecl"):
    whisper_model_n_audio_ctx = _libs["whisper"].get("whisper_model_n_audio_ctx", "cdecl")
    whisper_model_n_audio_ctx.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_audio_ctx.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 344
if _libs["whisper"].has("whisper_model_n_audio_state", "cdecl"):
    whisper_model_n_audio_state = _libs["whisper"].get("whisper_model_n_audio_state", "cdecl")
    whisper_model_n_audio_state.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_audio_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 345
if _libs["whisper"].has("whisper_model_n_audio_head", "cdecl"):
    whisper_model_n_audio_head = _libs["whisper"].get("whisper_model_n_audio_head", "cdecl")
    whisper_model_n_audio_head.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_audio_head.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 346
if _libs["whisper"].has("whisper_model_n_audio_layer", "cdecl"):
    whisper_model_n_audio_layer = _libs["whisper"].get("whisper_model_n_audio_layer", "cdecl")
    whisper_model_n_audio_layer.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_audio_layer.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 347
if _libs["whisper"].has("whisper_model_n_text_ctx", "cdecl"):
    whisper_model_n_text_ctx = _libs["whisper"].get("whisper_model_n_text_ctx", "cdecl")
    whisper_model_n_text_ctx.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_text_ctx.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 348
if _libs["whisper"].has("whisper_model_n_text_state", "cdecl"):
    whisper_model_n_text_state = _libs["whisper"].get("whisper_model_n_text_state", "cdecl")
    whisper_model_n_text_state.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_text_state.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 349
if _libs["whisper"].has("whisper_model_n_text_head", "cdecl"):
    whisper_model_n_text_head = _libs["whisper"].get("whisper_model_n_text_head", "cdecl")
    whisper_model_n_text_head.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_text_head.restype = c_int
